[update] potential direction of analysis

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,8 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "# Visualisations\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# ML Models\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -26,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read Data"
+    "## Data Frames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -115,36 +122,6 @@
        "      <td>0.34139</td>\n",
        "      <td>2.49204</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Norway</td>\n",
-       "      <td>Western Europe</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7.522</td>\n",
-       "      <td>0.03880</td>\n",
-       "      <td>1.45900</td>\n",
-       "      <td>1.33095</td>\n",
-       "      <td>0.88521</td>\n",
-       "      <td>0.66973</td>\n",
-       "      <td>0.36503</td>\n",
-       "      <td>0.34699</td>\n",
-       "      <td>2.46531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7.427</td>\n",
-       "      <td>0.03553</td>\n",
-       "      <td>1.32629</td>\n",
-       "      <td>1.32261</td>\n",
-       "      <td>0.90563</td>\n",
-       "      <td>0.63297</td>\n",
-       "      <td>0.32957</td>\n",
-       "      <td>0.45811</td>\n",
-       "      <td>2.45176</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -154,32 +131,24 @@
        "0  Switzerland  Western Europe               1            7.587   \n",
        "1      Iceland  Western Europe               2            7.561   \n",
        "2      Denmark  Western Europe               3            7.527   \n",
-       "3       Norway  Western Europe               4            7.522   \n",
-       "4       Canada   North America               5            7.427   \n",
        "\n",
        "   Standard Error  Economy (GDP per Capita)   Family  \\\n",
        "0         0.03411                   1.39651  1.34951   \n",
        "1         0.04884                   1.30232  1.40223   \n",
        "2         0.03328                   1.32548  1.36058   \n",
-       "3         0.03880                   1.45900  1.33095   \n",
-       "4         0.03553                   1.32629  1.32261   \n",
        "\n",
        "   Health (Life Expectancy)  Freedom  Trust (Government Corruption)  \\\n",
        "0                   0.94143  0.66557                        0.41978   \n",
        "1                   0.94784  0.62877                        0.14145   \n",
        "2                   0.87464  0.64938                        0.48357   \n",
-       "3                   0.88521  0.66973                        0.36503   \n",
-       "4                   0.90563  0.63297                        0.32957   \n",
        "\n",
        "   Generosity  Dystopia Residual  \n",
        "0     0.29678            2.51738  \n",
        "1     0.43630            2.70201  \n",
-       "2     0.34139            2.49204  \n",
-       "3     0.34699            2.46531  \n",
-       "4     0.45811            2.45176  "
+       "2     0.34139            2.49204  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,13 +157,12 @@
     "df_2015 = pd.read_csv('data/2015.csv')\n",
     "df_2016 = pd.read_csv('data/2016.csv')\n",
     "df_2017 = pd.read_csv('data/2017.csv')\n",
-    "df_1.head()\n",
-    "test"
+    "df_2015.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -282,38 +250,6 @@
        "      <td>0.47678</td>\n",
        "      <td>2.83137</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Norway</td>\n",
-       "      <td>Western Europe</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7.498</td>\n",
-       "      <td>7.421</td>\n",
-       "      <td>7.575</td>\n",
-       "      <td>1.57744</td>\n",
-       "      <td>1.12690</td>\n",
-       "      <td>0.79579</td>\n",
-       "      <td>0.59609</td>\n",
-       "      <td>0.35776</td>\n",
-       "      <td>0.37895</td>\n",
-       "      <td>2.66465</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Finland</td>\n",
-       "      <td>Western Europe</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7.413</td>\n",
-       "      <td>7.351</td>\n",
-       "      <td>7.475</td>\n",
-       "      <td>1.40598</td>\n",
-       "      <td>1.13464</td>\n",
-       "      <td>0.81091</td>\n",
-       "      <td>0.57104</td>\n",
-       "      <td>0.41004</td>\n",
-       "      <td>0.25492</td>\n",
-       "      <td>2.82596</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -323,38 +259,366 @@
        "0      Denmark  Western Europe               1            7.526   \n",
        "1  Switzerland  Western Europe               2            7.509   \n",
        "2      Iceland  Western Europe               3            7.501   \n",
-       "3       Norway  Western Europe               4            7.498   \n",
-       "4      Finland  Western Europe               5            7.413   \n",
        "\n",
        "   Lower Confidence Interval  Upper Confidence Interval  \\\n",
        "0                      7.460                      7.592   \n",
        "1                      7.428                      7.590   \n",
        "2                      7.333                      7.669   \n",
-       "3                      7.421                      7.575   \n",
-       "4                      7.351                      7.475   \n",
        "\n",
        "   Economy (GDP per Capita)   Family  Health (Life Expectancy)  Freedom  \\\n",
        "0                   1.44178  1.16374                   0.79504  0.57941   \n",
        "1                   1.52733  1.14524                   0.86303  0.58557   \n",
        "2                   1.42666  1.18326                   0.86733  0.56624   \n",
-       "3                   1.57744  1.12690                   0.79579  0.59609   \n",
-       "4                   1.40598  1.13464                   0.81091  0.57104   \n",
        "\n",
        "   Trust (Government Corruption)  Generosity  Dystopia Residual  \n",
        "0                        0.44453     0.36171            2.73939  \n",
        "1                        0.41203     0.28083            2.69463  \n",
-       "2                        0.14975     0.47678            2.83137  \n",
-       "3                        0.35776     0.37895            2.66465  \n",
-       "4                        0.41004     0.25492            2.82596  "
+       "2                        0.14975     0.47678            2.83137  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2.head()"
+    "df_2016.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Happiness.Rank</th>\n",
+       "      <th>Happiness.Score</th>\n",
+       "      <th>Whisker.high</th>\n",
+       "      <th>Whisker.low</th>\n",
+       "      <th>Economy..GDP.per.Capita.</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health..Life.Expectancy.</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Trust..Government.Corruption.</th>\n",
+       "      <th>Dystopia.Residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.537</td>\n",
+       "      <td>7.594445</td>\n",
+       "      <td>7.479556</td>\n",
+       "      <td>1.616463</td>\n",
+       "      <td>1.533524</td>\n",
+       "      <td>0.796667</td>\n",
+       "      <td>0.635423</td>\n",
+       "      <td>0.362012</td>\n",
+       "      <td>0.315964</td>\n",
+       "      <td>2.277027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.522</td>\n",
+       "      <td>7.581728</td>\n",
+       "      <td>7.462272</td>\n",
+       "      <td>1.482383</td>\n",
+       "      <td>1.551122</td>\n",
+       "      <td>0.792566</td>\n",
+       "      <td>0.626007</td>\n",
+       "      <td>0.355280</td>\n",
+       "      <td>0.400770</td>\n",
+       "      <td>2.313707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.504</td>\n",
+       "      <td>7.622030</td>\n",
+       "      <td>7.385970</td>\n",
+       "      <td>1.480633</td>\n",
+       "      <td>1.610574</td>\n",
+       "      <td>0.833552</td>\n",
+       "      <td>0.627163</td>\n",
+       "      <td>0.475540</td>\n",
+       "      <td>0.153527</td>\n",
+       "      <td>2.322715</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country  Happiness.Rank  Happiness.Score  Whisker.high  Whisker.low  \\\n",
+       "0   Norway               1            7.537      7.594445     7.479556   \n",
+       "1  Denmark               2            7.522      7.581728     7.462272   \n",
+       "2  Iceland               3            7.504      7.622030     7.385970   \n",
+       "\n",
+       "   Economy..GDP.per.Capita.    Family  Health..Life.Expectancy.   Freedom  \\\n",
+       "0                  1.616463  1.533524                  0.796667  0.635423   \n",
+       "1                  1.482383  1.551122                  0.792566  0.626007   \n",
+       "2                  1.480633  1.610574                  0.833552  0.627163   \n",
+       "\n",
+       "   Generosity  Trust..Government.Corruption.  Dystopia.Residual  \n",
+       "0    0.362012                       0.315964           2.277027  \n",
+       "1    0.355280                       0.400770           2.313707  \n",
+       "2    0.475540                       0.153527           2.322715  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2017.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I don't like the way the 2017 data is labelled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2017.columns = df_2015.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Happiness Rank</th>\n",
+       "      <th>Happiness Score</th>\n",
+       "      <th>Standard Error</th>\n",
+       "      <th>Economy (GDP per Capita)</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health (Life Expectancy)</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Trust (Government Corruption)</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Dystopia Residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.537</td>\n",
+       "      <td>7.594445</td>\n",
+       "      <td>7.479556</td>\n",
+       "      <td>1.616463</td>\n",
+       "      <td>1.533524</td>\n",
+       "      <td>0.796667</td>\n",
+       "      <td>0.635423</td>\n",
+       "      <td>0.362012</td>\n",
+       "      <td>0.315964</td>\n",
+       "      <td>2.277027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.522</td>\n",
+       "      <td>7.581728</td>\n",
+       "      <td>7.462272</td>\n",
+       "      <td>1.482383</td>\n",
+       "      <td>1.551122</td>\n",
+       "      <td>0.792566</td>\n",
+       "      <td>0.626007</td>\n",
+       "      <td>0.355280</td>\n",
+       "      <td>0.400770</td>\n",
+       "      <td>2.313707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.504</td>\n",
+       "      <td>7.622030</td>\n",
+       "      <td>7.385970</td>\n",
+       "      <td>1.480633</td>\n",
+       "      <td>1.610574</td>\n",
+       "      <td>0.833552</td>\n",
+       "      <td>0.627163</td>\n",
+       "      <td>0.475540</td>\n",
+       "      <td>0.153527</td>\n",
+       "      <td>2.322715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.494</td>\n",
+       "      <td>7.561772</td>\n",
+       "      <td>7.426227</td>\n",
+       "      <td>1.564980</td>\n",
+       "      <td>1.516912</td>\n",
+       "      <td>0.858131</td>\n",
+       "      <td>0.620071</td>\n",
+       "      <td>0.290549</td>\n",
+       "      <td>0.367007</td>\n",
+       "      <td>2.276716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.469</td>\n",
+       "      <td>7.527542</td>\n",
+       "      <td>7.410458</td>\n",
+       "      <td>1.443572</td>\n",
+       "      <td>1.540247</td>\n",
+       "      <td>0.809158</td>\n",
+       "      <td>0.617951</td>\n",
+       "      <td>0.245483</td>\n",
+       "      <td>0.382612</td>\n",
+       "      <td>2.430182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country  Region  Happiness Rank  Happiness Score  Standard Error  \\\n",
+       "0       Norway       1           7.537         7.594445        7.479556   \n",
+       "1      Denmark       2           7.522         7.581728        7.462272   \n",
+       "2      Iceland       3           7.504         7.622030        7.385970   \n",
+       "3  Switzerland       4           7.494         7.561772        7.426227   \n",
+       "4      Finland       5           7.469         7.527542        7.410458   \n",
+       "\n",
+       "   Economy (GDP per Capita)    Family  Health (Life Expectancy)   Freedom  \\\n",
+       "0                  1.616463  1.533524                  0.796667  0.635423   \n",
+       "1                  1.482383  1.551122                  0.792566  0.626007   \n",
+       "2                  1.480633  1.610574                  0.833552  0.627163   \n",
+       "3                  1.564980  1.516912                  0.858131  0.620071   \n",
+       "4                  1.443572  1.540247                  0.809158  0.617951   \n",
+       "\n",
+       "   Trust (Government Corruption)  Generosity  Dystopia Residual  \n",
+       "0                       0.362012    0.315964           2.277027  \n",
+       "1                       0.355280    0.400770           2.313707  \n",
+       "2                       0.475540    0.153527           2.322715  \n",
+       "3                       0.290549    0.367007           2.276716  \n",
+       "4                       0.245483    0.382612           2.430182  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2017.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will leave these dataframes unmerged for now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What kind of problem is this?\n",
+    "- This can be a regression model; features like `Happiness Rank` of different years can be predicted with a regression model.\n",
+    "- This could also be a classification model; one could use several features to guess a country.\n",
+    "- Data can be clustered; "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Normalisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Data"
    ]
   },
   {
