--- a/world_happiness_analysis.ipynb
+++ b/world_happiness_analysis.ipynb
@@ -590,7 +590,7 @@
     "What kind of problem is this?\n",
     "- This can be a regression model; features like `Happiness Rank` of different years can be predicted with a regression model.\n",
     "- This could also be a classification model; one could use several features to guess a country.\n",
-    "- Data can be clustered; "
+    "- Data can be clustered; one could see if region affects feature values."
    ]
   },
   {
