--- a/world_happiness_analysis.ipynb
+++ b/world_happiness_analysis.ipynb
@@ -705,7 +705,7 @@
    "source": [
     "## What can I predict?\n",
     "\n",
-    "- I will predict `Happiness Score` based off of GDP, Family, Health, Freedom, Trust, Generosity & Dystopia Residual :)\n",
+    "- I will predict `Happiness Score` based off of **GDP, Family, Health, Freedom, Trust, Generosity & Dystopia Residual** :)\n",
     "- Will most likely be a multi-variable regression model."
    ]
   },
@@ -824,6 +824,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    7.587\n",
+       "1    7.561\n",
+       "2    7.527\n",
+       "3    7.522\n",
+       "4    7.427\n",
+       "Name: Happiness Score, dtype: float64"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = df_merged[\"Happiness Score\"]\n",
+    "target.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -832,24 +858,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'housing_features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-228-27f1a22c1e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmin_max_scaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMinMaxScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_minmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin_max_scaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhousing_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_minmax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'housing_features' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.69614277 0.8706399  ... 0.16877961 0.53226141 0.6763566 ]\n",
+      " [0.99301561 0.70852272 0.84477956 ... 0.57700075 0.41647656 0.61652143]\n",
+      " [0.9919885  0.77989457 0.82638239 ... 0.43555759 0.42330824 0.60890418]\n",
+      " ...\n",
+      " [0.13475758 0.27322282 0.64696797 ... 0.42270238 0.08055911 0.08336814]\n",
+      " [0.04354969 0.04897597 0.39103672 ... 0.24393419 0.10265575 0.3859761 ]\n",
+      " [0.         0.         0.         ... 0.33514475 0.0690062  0.49511412]]\n"
      ]
     }
    ],
    "source": [
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
-    "X_minmax = min_max_scaler.fit_transform(housing_features)\n",
+    "X_minmax = min_max_scaler.fit_transform(df_merged[1:])\n",
     "print(X_minmax)"
    ]
   },
