--- a/world_happiness_analysis.ipynb
+++ b/world_happiness_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "2                        0.14975     0.47678            2.83137  "
       ]
      },
-     "execution_count": 340,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "2    0.475540                       0.153527           2.322715  "
       ]
      },
-     "execution_count": 341,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "1  Western Europe  "
       ]
      },
-     "execution_count": 345,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "1  0.626007    0.355280                       0.400770           2.313707  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "1                       0.355280    0.400770           2.313707  "
       ]
      },
-     "execution_count": 349,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "2     0.34139            2.49204  "
       ]
      },
-     "execution_count": 351,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "Name: Happiness Score, dtype: float64"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "4                        0.32957     0.45811            2.45176  "
       ]
      },
-     "execution_count": 353,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,16 +969,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1094b94e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ecbc8d0>"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,15 +1084,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 Score: -31.921395578882965\n",
-      "MSE Score: 40.687411480691054\n"
+      "R^2 Score: -30.772658655593453\n",
+      "MSE Score: 45.53369633451199\n"
      ]
     }
    ],
@@ -1114,17 +1114,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We scaled the data, and we can't drop correlated features with `Happiness Score` as there arent any from the heatmap.\n",
+    "- We already scaled the data, and we can't drop correlated features with `Happiness Score` as there arent any (look at heatmap).\n",
     "- Is it time to boost?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Let's go instantiate, fit and predict. \n",
+    "# Boosting linear regression model\n",
     "gbrt=GradientBoostingRegressor(n_estimators=100) \n",
     "gbrt.fit(X_train, y_train) \n",
     "y_pred=gbrt.predict(X_test) "
@@ -1132,15 +1132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 Score: 0.9546840731798647\n",
-      "MSE Score: 0.05600575943816931\n"
+      "R^2 Score: 0.9680886856508941\n",
+      "MSE Score: 0.045732405114657856\n"
      ]
     }
    ],
@@ -1156,8 +1156,35 @@
    "metadata": {},
    "source": [
     "## What is boosting?\n",
-    "- It is an ensemble method"
+    "- It is an ensemble method; a family of algorithms that are able to convert weak learners to strong learners. \n",
+    "- Many weak algorithms working together do better than 1 big, monolithic algorithm (Wisdom of the crowds)\n",
+    "-  Boosting is an ensemble method for improving the model predictions of any given learning algorithm. The idea of boosting is to train weak learners sequentially, each trying to correct its predecessor."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://miro.medium.com/max/1600/0*qCcM7uCOqIw6npnJ.png\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maybe the way we are splitting our data is part of the problem as well? \n",
+    "- Train, test, split method is pretty good. You are training a model with 80% of data, and leaving the rest to see how well it trained the model. This is a good way to test the model as it has not seen the remaining 20% of the data. \n",
+    "- However, it could be the case that the data that is given to the model, however unlikely, is entirely 1 type of data and our test data is of another type. This can effect the performance of the model.\n",
+    "- For example, lets assume our data are a bank math problems; it could be the case that we train a student with just algebra problems. The remaining questions in the bank could be calculus problems and the student wouldn't be effectively trained to solve them.\n",
+    "- The solution to this? **K fold cross validation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
