[added] pca for visualisation

--- a/world_happiness_analysis.ipynb
+++ b/world_happiness_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,10 +24,12 @@
     "# Machine Learning\n",
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold, StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.ensemble import GradientBoostingRegressor"
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 526,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +166,7 @@
        "2                        0.14975     0.47678            2.83137  "
       ]
      },
-     "execution_count": 377,
+     "execution_count": 527,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
        "2    0.475540                       0.153527           2.322715  "
       ]
      },
-     "execution_count": 378,
+     "execution_count": 528,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +442,7 @@
        "1  Western Europe  "
       ]
      },
-     "execution_count": 382,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +579,7 @@
        "1  0.626007    0.355280                       0.400770           2.313707  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 534,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +693,7 @@
        "1                       0.355280    0.400770           2.313707  "
       ]
      },
-     "execution_count": 386,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +815,7 @@
        "2     0.34139            2.49204  "
       ]
      },
-     "execution_count": 388,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 539,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +843,7 @@
        "Name: Happiness Score, dtype: float64"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 539,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +960,7 @@
        "4                        0.32957     0.45811            2.45176  "
       ]
      },
-     "execution_count": 390,
+     "execution_count": 540,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,16 +971,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ecbc8d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ee1d278>"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 541,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1008,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1050,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 543,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,15 +1086,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 Score: -30.772658655593453\n",
-      "MSE Score: 45.53369633451199\n"
+      "R^2 Score: -37.28630159282712\n",
+      "MSE Score: 50.00447810336014\n"
      ]
     }
    ],
@@ -1120,27 +1122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Boosting linear regression model\n",
-    "gbrt=GradientBoostingRegressor(n_estimators=100) \n",
+    "gbrt=GradientBoostingRegressor(n_estimators=100)\n",
     "gbrt.fit(X_train, y_train) \n",
     "y_pred=gbrt.predict(X_test) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 Score: 0.9680886856508941\n",
-      "MSE Score: 0.045732405114657856\n"
+      "R^2 Score: 0.9659798410172765\n",
+      "MSE Score: 0.044432609684168047\n"
      ]
     }
    ],
@@ -1176,7 +1178,126 @@
     "- Train, test, split method is pretty good. You are training a model with 80% of data, and leaving the rest to see how well it trained the model. This is a good way to test the model as it has not seen the remaining 20% of the data. \n",
     "- However, it could be the case that the data that is given to the model, however unlikely, is entirely 1 type of data and our test data is of another type. This can effect the performance of the model.\n",
     "- For example, lets assume our data are a bank math problems; it could be the case that we train a student with just algebra problems. The remaining questions in the bank could be calculus problems and the student wouldn't be effectively trained to solve them.\n",
+    "- The way the data is split is randomised, this is why re-run the cell that splits your data it will slightly change your results. \n",
     "- The solution to this? **K fold cross validation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K fold cross validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- In K-Folds Cross Validation we split our data into k different subsets (or folds). \n",
+    "- We use k-1 subsets to train our data and leave the last subset (or the last fold) as test data. \n",
+    "- We then average the model against each of the folds and then finalize our model. \n",
+    "- After that we test it against the test set.\n",
+    "- so 2 things are actually happening; **K folding & Cross Validating**\n",
+    "- This technique is good because the model gets a full variety of data & scores are averaged out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A visual of K folding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://miro.medium.com/max/2892/1*J2B_bcbd1-s1kpWOu_FZrg.png\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A visual of cross validating"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://qph.fs.quoracdn.net/main-qimg-b447ccab33d9aac81ab6ba218f1aa17c\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 548,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# folds = StratifiedKFold(n_splits=3)\n",
+    "# kf = KFold(n_splits=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 549,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for train_index, test_index in kf.split(features):\n",
+    "#     X_train, X_test, y_train, y_test = features[train_index], features[test_index], target[train_index], target[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 553,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all_accuracies = cross_val_score(estimator=gbrt, X=features, y=target, cv=5, scoring='accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use PCA to visualise multivariate regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 558,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance for Principal Component 0: 0.4535346490555204\n",
+      "Explained Variance for Principal Component 1: 0.3734983747344931\n",
+      "Explained Variance for Principal Component 2: 0.07850020848478009\n",
+      "Explained Variance for Principal Component 3: 0.039261816717954694\n",
+      "Explained Variance for Principal Component 4: 0.025145070366335433\n",
+      "Explained Variance for Principal Component 5: 0.01754302138383124\n",
+      "Explained Variance for Principal Component 6: 0.012516859257085091\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialise the model\n",
+    "pca = PCA() \n",
+    "\n",
+    "# Fit the model with scaled data\n",
+    "pca.fit(features) \n",
+    "\n",
+    "# Transform the scaled data\n",
+    "pca_transformed = pca.transform(scaled_df) \n",
+    "\n",
+    "# enumerate through \"pca_transformed.explained_variance_ratio_\"\n",
+    "# to see the amount of variance captured by each Principal Component\n",
+    "for ind, var in enumerate(pca.explained_variance_ratio_):\n",
+    "\tprint(f'Explained Variance for Principal Component {ind}: {var}')"
    ]
   },
   {
