--- a/world_happiness_analysis.ipynb
+++ b/world_happiness_analysis.ipynb
@@ -1070,11 +1070,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = lr_model.predict(X_test)"
+    "y_pred = lr_model.predict(X_test_minmax)"
    ]
   },
   {
@@ -1086,15 +1086,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2 Score: -37.28630159282712\n",
-      "MSE Score: 50.00447810336014\n"
+      "R^2 Score: 0.999999939524615\n",
+      "MSE Score: 7.898490956628707e-08\n"
      ]
     }
    ],
@@ -1298,6 +1298,39 @@
     "# to see the amount of variance captured by each Principal Component\n",
     "for ind, var in enumerate(pca.explained_variance_ratio_):\n",
     "\tprint(f'Explained Variance for Principal Component {ind}: {var}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 563,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 1 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-563-f485dc2f9eef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# plot data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcomponents_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvector\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 1 with size 1"
+     ]
+    }
+   ],
+   "source": [
+    "def draw_vector(v0, v1, ax=None):\n",
+    "    ax = ax or plt.gca()\n",
+    "    arrowprops=dict(arrowstyle='->',\n",
+    "                    linewidth=2,\n",
+    "                    shrinkA=0, shrinkB=0)\n",
+    "    ax.annotate('', v1, v0, arrowprops=arrowprops)\n",
+    "\n",
+    "# plot data\n",
+    "plt.scatter(X[:, 0], X[:, 1], alpha=0.2)\n",
+    "for length, vector in zip(pca.explained_variance_, pca.components_):\n",
+    "    v = vector * 3 * np.sqrt(length)\n",
+    "    draw_vector(pca.mean_, pca.mean_ + v)\n",
+    "plt.axis('equal');"
    ]
   },
   {
